# evolution-rss

./: .gitignore  AUTHORS  ChangeLog  FAQ  MAINTAINERS  Makefile.am  Makefile.in  NEWS  TODO  aclocal.m4  config.h.in  configure  configure.ac  evolution-rss.desktop.in.in  evolution-rss.doap  evolution-rss.metainfo.xml.in  evolution-rss.spec.in  server.mk
m4/: evolution.m4  gecko.m4
pixmaps/: Makefile.am  Makefile.in
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  as.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  eu.po  fr.po  gl.po  gu.po  hi.po  hr.po  hu.po  id.po  it.po  kn.po  lt.po  lv.po  ml.po  mr.po  nb.po  nl.po  oc.po  or.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  (+11 more)
scripts/: Makefile.am  create-snapshot.sh  evo-get-accounts.sh  evolution-rss-migrate-feeds  evolution-rss-migrate-feeds.c  migrate-gconf-gsettings.sh  rss-get-feeds.sh
src/: GNOME_Evolution_RSS.server.in.in  Makefile.am  Makefile.in  dbus.c  dbus.h  debug.h  e-mail-formatter-evolution-rss.c  e-mail-formatter-evolution-rss.h  e-mail-parser-evolution-rss.c  e-mail-parser-evolution-rss.h  e-mail-part-rss.c  e-mail-part-rss.h  evo.patch  evolution-import-rss.c  evolution-module-rss.c  evolution-rss-dbus.c  evolution-rss.convert  evolution-rss.schemas.in  evolution-rss.schemas.in.in  fetch.c  fetch.h  file-gio.c  file-gio.h  gecko-utils.cpp  gecko-utils.h  misc.c  misc.h  module-eds-rss.c  network-soup.c  network-soup.h  network.h  notification.c  notification.h  org-gnome-evolution-rss.eplug.xml  org-gnome-evolution-rss.error.xml  org.gnome.evolution.plugin.evolution-rss.gschema.xml.in  parser.c  parser.h  rss-cache.c  rss-cache.h  (+22 more)
trunk/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  TODO  config.h.in  server.mk
trunk/m4/: gecko.m4
trunk/po/: POTFILES.in  en_AU.po
trunk/src/: Makefile.am  Makefile.in  dbus.c  evolution-import-rss.c  misc.c  network-soup.c  network.h  org-gnome-evolution-rss.eplug.xml  rss-config-factory.c  rss-config-factory.h  rss.c  rss.h
